# clockchain

./: Block Chain.docx  Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  ChainServer.cpp  Mingclent.cpp  Queryclient.cpp  README.md  server.cpp  test.xlsx
json/: blockchain.json  json-none.json
test/: jsontest.cpp  jsontest1.cpp  main.cpp  timer.cpp  timer.h  timertest.cpp
